[package]
name = "poolpoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
ethabi = "18.0.0"
ethereum-tx-sign = "6.1.2"
ethereum-types = "0.14.1"
hex = "0.4.3"
log = "0.4.19"
log4rs = "1.2.0"
num-traits = "0.2.17"
pg_bigdecimal = "0.1.5"
postgres = "0.19.5"
rand = "0.8.5"
refinery = { version = "0.8.10", features = ["postgres"] }
rust_decimal = { version = "1.30.0", features = ["db-postgres", "tokio-pg"] }
serde = "1.0.171"
serde_json = "1.0.102"
serde_yaml = "0.9.22"
sql_query_builder = { version = "1.1.4", features = ["postgresql"] }
ureq = { version = "2.7.1", features = ["json"] }
